# singlish_telegram_bot

./: .gitignore  README.md  app.py  create_schema.py  db.py  pyproject.toml  scraper.py
